--- a/21_subcortical_shape.html
+++ b/21_subcortical_shape.html
@@ -37,7 +37,7 @@
             </p>
             <h3>References</h3>
         	<ol>
-                <li>Keller SS, Richardson MP, O’Muircheartaigh J, Schoene-Bake J-C, Elger C, Weber B. Morphometric MRI alterations and postoperative seizure control in refractory temporal lobe epilepsy: Morphometry and Outcome in Epilepsy. <em>Hum Brain Mapp</em> (2015) 36:1637–1647. doi:<a href="https://onlinelibrary.wiley.com/doi/10.1002/hbm.22722">10.1002/hbm.22722<\a></li>
+                <li>Keller SS, Richardson MP, O’Muircheartaigh J, Schoene-Bake J-C, Elger C, Weber B. Morphometric MRI alterations and postoperative seizure control in refractory temporal lobe epilepsy: Morphometry and Outcome in Epilepsy. <em>Hum Brain Mapp</em> (2015) 36:1637–1647. doi:<a href="https://onlinelibrary.wiley.com/doi/10.1002/hbm.22722">10.1002/hbm.22722</a></li>
             </ol>
         </div>
         <footer id="footer">
