--- a/21_subcortical_shape.html
+++ b/21_subcortical_shape.html
@@ -38,6 +38,10 @@
             <h3>References</h3>
         	<ol>
                 <li>Keller SS, Richardson MP, O’Muircheartaigh J, Schoene-Bake J-C, Elger C, Weber B. Morphometric MRI alterations and postoperative seizure control in refractory temporal lobe epilepsy: Morphometry and Outcome in Epilepsy. <em>Hum Brain Mapp</em> (2015) 36:1637–1647. doi:<a href="https://onlinelibrary.wiley.com/doi/10.1002/hbm.22722">10.1002/hbm.22722</a></li>
+                <li>Perani S, Tierney TM, Centeno M, Shamshiri EA, Yaakub SN, O’Muircheartaigh J, Carmichael DW, Richardson MP. Thalamic volume reduction in drug-naive patients with new-onset genetic generalized epilepsy. <em>Epilepsia</em> (2018) 59:226–234. doi:<a href="https://onlinelibrary.wiley.com/doi/10.1111/epi.13955">10.1111/epi.13955</a></li>
+                <li>Jama-António JMC, Yasuda CL, Cendes F. Neurocysticercosis and Hippocampal Atrophy: MRI Findings and the Evolution of Viable or Calcified Cysts in Patients With Neurocysticercosis. <em>Front Neurol</em> (2019) 10: doi:<a href="https://www.frontiersin.org/articles/10.3389/fneur.2019.00449/full">10.3389/fneur.2019.00449</a></li>
+                <li>Leek NJ, Neason M, Kreilkamp B a. K, de Bezenac C, Ziso B, Elkommos S, Das K, Marson AG, Keller SS. Thalamohippocampal atrophy in focal epilepsy of unknown cause at the time of diagnosis. <em>Eur J Neurol</em> (2021) 28:367–376. doi:<a href="https://onlinelibrary.wiley.com/doi/10.1111/ene.14565">10.1111/ene.14565</a></li>
+                <li>Jenkinson M, Beckmann CF, Behrens TEJ, Woolrich MW, Smith SM. FSL. <em>NeuroImage</em>(2012) 62:782–790. doi:<a href="https://www.sciencedirect.com/science/article/pii/S1053811911010603?via%3Dihub">10.1016/j.neuroimage.2011.09.015</a></li>
             </ol>
         </div>
         <footer id="footer">
