--- a/21_subcortical_shape.html
+++ b/21_subcortical_shape.html
@@ -20,7 +20,7 @@
             </div>
         </div>
         <div id="page_content">
-            <h3>First author:</h3>
+            <h3>Rationale</h3>
         	<p class="bodytext">Neurocysticercosis (NCC), a parasitic CNS infection endemic to developing nations, is the leading global cause of acquired epilepsy. It is currently unknown why some patients with NCC develop recurrent seizures, although previous research has suggested that ictogenesis is a consequence of abnormal sub-cortical circuitry. There is evidence for a relationship between hippocampal sclerosis and increased seizure incidence in NCC, and other subcortical structures, the thalamus in particular, are increasingly reported as abnormal in new-onset epilepsy. A relative sparsity of biomarker literature has been identified in NCC-based epileptogenesis, and so the present study aimed to assess the putative importance of sub-cortical abnormalities in NCC to the expression of spontaneous recurrent seizures. A common approach in epilepsy research, sub-cortical surface shape analysis, quantifies surface deflation of sub-cortical structures, providing a proxy measurement for localised atrophy.
             </p>
             <h3>Methods</h3>
@@ -41,7 +41,7 @@
                 <li>Perani S, Tierney TM, Centeno M, Shamshiri EA, Yaakub SN, O’Muircheartaigh J, Carmichael DW, Richardson MP. Thalamic volume reduction in drug-naive patients with new-onset genetic generalized epilepsy. <em>Epilepsia</em> (2018) 59:226–234. doi:<a href="https://onlinelibrary.wiley.com/doi/10.1111/epi.13955">10.1111/epi.13955</a></li>
                 <li>Jama-António JMC, Yasuda CL, Cendes F. Neurocysticercosis and Hippocampal Atrophy: MRI Findings and the Evolution of Viable or Calcified Cysts in Patients With Neurocysticercosis. <em>Front Neurol</em> (2019) 10: doi:<a href="https://www.frontiersin.org/articles/10.3389/fneur.2019.00449/full">10.3389/fneur.2019.00449</a></li>
                 <li>Leek NJ, Neason M, Kreilkamp B a. K, de Bezenac C, Ziso B, Elkommos S, Das K, Marson AG, Keller SS. Thalamohippocampal atrophy in focal epilepsy of unknown cause at the time of diagnosis. <em>Eur J Neurol</em> (2021) 28:367–376. doi:<a href="https://onlinelibrary.wiley.com/doi/10.1111/ene.14565">10.1111/ene.14565</a></li>
-                <li>Jenkinson M, Beckmann CF, Behrens TEJ, Woolrich MW, Smith SM. FSL. <em>NeuroImage</em>(2012) 62:782–790. doi:<a href="https://www.sciencedirect.com/science/article/pii/S1053811911010603?via%3Dihub">10.1016/j.neuroimage.2011.09.015</a></li>
+                <li>Jenkinson M, Beckmann CF, Behrens TEJ, Woolrich MW, Smith SM. FSL. <em>NeuroImage</em> (2012) 62:782–790. doi:<a href="https://www.sciencedirect.com/science/article/pii/S1053811911010603?via%3Dihub">10.1016/j.neuroimage.2011.09.015</a></li>
             </ol>
         </div>
         <footer id="footer">
