--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         		<h1>Corey Ratcliffe: Neuroscientist to Neuroscientist</h1>
         	</div>
         	<div id="hero_subtext">
-        		<h2>A combination blog, portfolio, and resource</h2>
+        		<h2>A combination blog, portfolio, and informative resource</h2>
             </div>
         </div>
         <div id="page_content">
