--- a/21_subcortical_shape.html
+++ b/21_subcortical_shape.html
@@ -10,7 +10,10 @@
             <ul class="nav">
                 <li class="nav"><a class = "nav" href="https://c-ratcliffe.github.io">Home</a></li>
                 <li class="nav"><a class = "nav" href="https://c-ratcliffe.github.io/abstracts">Abstracts</a></li>
+                <li class="nav"><a class = "nav" href="https://c-ratcliffe.github.io/books">Books</a></li>
+                <li class="nav"><a class = "nav" href="https://c-ratcliffe.github.io/music">Music</a></li>
                 <li class="nav"><a class = "nav" href="https://c-ratcliffe.github.io/software">Software</a></li>
+                <li class="nav"><a class = "nav" href="https://c-ratcliffe.github.io/acknowledgements">Acknowledgements</a></li>
             </ul>
         	<div id="hero_text">
         		<h1>Subcortical Shape Analysis in Patients with Neurocysticercosis Presenting with Seizures</h1>
