--- a/acknowledgements.html
+++ b/acknowledgements.html
@@ -16,21 +16,16 @@
                 <li class="nav"><a class = "nav" href="https://c-ratcliffe.github.io/acknowledgements">Acknowledgements</a></li>
             </ul>
         	<div id="hero_text">
-        		<h1>Corey Ratcliffe: Neuroscientist to Neuroscientist</h1>
+        		<h1>Acknowledgments</h1>
         	</div>
         	<div id="hero_subtext">
-        		<h2>A combination blog, portfolio, and informative resource</h2>
+        		<h2>Individuals who have contributed to this site, in one way or another</h2>
             </div>
         </div>
         <div id="page_content">
-        	<h3>Included on this site is:</h3>
+        	<h3>Media</h3>
         	<ul>
-                <li>An overview and introduction the work I have done since starting my PhD in neuroimaging, which has focused on imaging neural networks in Epilepsy and Neurocysticercosis</li>
-                <li>A list of recommended software for a wide variety of functions, on Windows, Linux (Ubuntu), and sometimes Android</li>
-                <li>A book and music journal</li>
-                <li>Links to online resources</li>
-                <li>Supporting information for presentations and posters</li>
-                <li>Please excuse the commit history, this is a work in progress</li>
+                <li>Header image: Used under the Free Unsplash license, provided by <a href="Robina Weermeijer">Robina Weermeijer</a></li>
             </ul>
         </div>
         <footer id="footer">
