--- a/books.html
+++ b/books.html
@@ -16,14 +16,16 @@
                 <li class="nav"><a class = "nav" href="https://c-ratcliffe.github.io/acknowledgements">Acknowledgements</a></li>
             </ul>
         	<div id="hero_text">
-        		<h1>Software Recommendations</h1>
+        		<h1>Book Recommendations</h1>
         	</div>
         	<div id="hero_subtext">
-        		<h2>Programmes, tools, and packages for myriad applications</h2>
+        		<h2>Books and authors I've gotten something from in the past</h2>
             </div>
         </div>
         <div id="page_content">
-        	<h3>Efforts have been made to limit software to free and open-source options. Some paid for options are included when no better alternative exists (to my knowledge). Subscription models are excluded entirely.</h3>
+        	<h3>Recommendations are made purely based on my own subjective reading experience.
+                <br/>
+                <br/>Audiobooks have been included, but as part of a separate section.</h3>
         	<ul>
                 <li><a href="https://atom.io">Atom Editor</a> - Highly modifiable text editor with full GitHub integration [Linux, Mac, Windows]</li>
                 <li><a href="https://www.audacityteam.org/">Audacity</a> - Multi-track audio editing, relatively powerful for its learning curve [Linux, Mac, Windows]</li>
