--- a/music.html
+++ b/music.html
@@ -16,14 +16,16 @@
                 <li class="nav"><a class = "nav" href="https://c-ratcliffe.github.io/acknowledgements">Acknowledgements</a></li>
             </ul>
         	<div id="hero_text">
-        		<h1>Software Recommendations</h1>
+        		<h1>Music Recommendations</h1>
         	</div>
         	<div id="hero_subtext">
-        		<h2>Programmes, tools, and packages for myriad applications</h2>
+        		<h2>Artists and projects I'd like others to know about</h2>
             </div>
         </div>
         <div id="page_content">
-        	<h3>Efforts have been made to limit software to free and open-source options. Some paid for options are included when no better alternative exists (to my knowledge). Subscription models are excluded entirely.</h3>
+        	<h3>Recommendations are made purely based on my own subjective listening experience.
+                <br/>There will be a heavy focus on extreme metal artists, although I will try to be as eclectic as possible.
+                <br/>Artists are grouped by genre umbrella, so there will undoubtedly be some level of subjectivity involved. Unfortunately, I can't please everyone.</h3>
         	<ul>
                 <li><a href="https://atom.io">Atom Editor</a> - Highly modifiable text editor with full GitHub integration [Linux, Mac, Windows]</li>
                 <li><a href="https://www.audacityteam.org/">Audacity</a> - Multi-track audio editing, relatively powerful for its learning curve [Linux, Mac, Windows]</li>
