--- a/acknowledgements.html
+++ b/acknowledgements.html
@@ -25,7 +25,7 @@
         <div id="page_content">
         	<h3>Media</h3>
         	<ul>
-                <li>Header image: Used under the Free Unsplash license, provided by <a href="Robina Weermeijer">Robina Weermeijer</a></li>
+                <li>Header image: Used under the free Unsplash license, provided by <a href="Robina Weermeijer">Robina Weermeijer</a></li>
             </ul>
         </div>
         <footer id="footer">
