books-music_content

--- a/books.html
+++ b/books.html
@@ -24,41 +24,20 @@
         </div>
         <div id="page_content">
         	<h3>Recommendations are made purely based on my own subjective reading experience.
+                <br/>Audiobooks have been included, but as part of a separate section.
                 <br/>
-                <br/>Audiobooks have been included, but as part of a separate section.</h3>
+                <br/>Audiobooks:</h3>
         	<ul>
-                <li><a href="https://atom.io">Atom Editor</a> - Highly modifiable text editor with full GitHub integration [Linux, Mac, Windows]</li>
-                <li><a href="https://www.audacityteam.org/">Audacity</a> - Multi-track audio editing, relatively powerful for its learning curve [Linux, Mac, Windows]</li>
-                <ul>
-                    <li class="sub">Requires manual installation of the third-party LAME encoder to export to mp3 on Linux</li>
-                </ul>
-                <li><a href="https://brave.com">Brave Browser</a> - Chrome-based browser with a built-in adblocker and TOR browser [Linux, Mac, Windows]</li>
-                <li><a href="https://calibre-ebook.com">Calibre</a> - E-Book library manager, exporter, and reader [Linux, Mac, Windows]</li>
-                <li><a href="https://picotorrent.org/">Picotorrent</a> - Fast, safe, and minimal torrent client [Windows]</li>
-                <li><a href="https://equalizerapo.com/">Equalizer APO</a> - Open source audio processing software, functions as a systemwide EQ [Windows]</li>
-                <li><a href="https://equalizerapo.com/">Equalizer APO</a>Peace Equalizer - Highly recommended interface for Equalizer APO
-                <li><a href="https://evince.en.softonic.com/">Evince PDF Reader</a> - Lightweight, but powerful, document viewer [Linux]</li>
-                <li><a href="https://www.foxit.com/pdf-reader/">Foxit Reader</a> - Powerful and free document viewer [Linux, Mac, Windows]</li>
-                <ul>
-                    <li class="sub">Lacks some features on Linux</li>
-                    <li class="sub">Advertisements can easily be disabled in the preferences</li>
-                </ul>
-                <li><a href="https://www.gimp.org/">GIMP</a> - Vector based image manipulation software, a Photoshop alternative [Linux, Mac, Windows]</li>
-                <li><a href="https://inkscape.org/">Inkscape</a> - Vector based graphics editor, an Illustrator alternative [Linux, Mac, Windows]</li>
-                <li><a href="https://krita.org/en/">Krita</a> - Feature-heavy painting and drawing program [Linux, Mac, Windows]</li>
-                <li><a href="https://www.getmusicbee.com/">Musicbee</a> - Highly customisable music library manager, exporter, and player [Windows]</li>
-                <ul>
-                    <li class="sub"><a class="sub" href="https://github.com/dsafa/audio-band">Audioband</a> - A taskbar-based audio controller for Spotify, iTunes, or MusicBee [Windows]</li>
-                </ul>
-                <li><a href="https://www.openshot.org/">OpenShot</a> - Powerful video editing software [Linux, Mac, Windows]</li>
-                <li><a href="https://www.scribus.net/">Scribus</a> - Desktop publishing software, an InDesign alternative [Linux, Mac, Windows]</li>
-                <li><a href="https://tiddlywiki.com/">Tiddlywiki</a> - A html based personal wikipedia tool, incredibly lightweight, and unsurpassed as a diary</li>
-                <ul>
-                    <li class="sub"><a class="sub" href="https://github.com/Jermolene/TiddlyDesktop">TiddlyDesktop</a> - A fusion web-browser/Javascript node built in NWJS, allowing Tiddlywiki to run as a native app [Linux, Mac, Windows]</li>
-                    <li class="sub"><a class="sub" href="https://andtidwiki.en.aptoide.com/app">AndTidWiki</a> - A standalone html viewing tool, optimised for TiddlyWiki [Android]</li>
-                </ul>
-                <li><a href="https://www.videolan.org/">VLC</a> - Powerful multimedia player [Linux, Mac, Windows]</li>
-                <li><a href="https://www.zotero.org/">Zotero</a> - Reference and journal library manager, capable of sharing libraries between devices [Linux, Mac, Windows]</li>
+                <li><a href="https://www.goodreads.com/series/40957-the-hitchhiker-s-guide-to-the-galaxy">Adams, D. - The Hitchhiker's Guide to the Galaxy [1 - 5]</a>: Occasionally philosophical, often contemplative, and consistently hilarious, this is a sci-fi series full of imagination and British charm. The audiobooks are marvellously voiced, too.</li>
+            </ul>
+            <h3>Print:</h3>
+            <ul>
+                <li><a href="https://www.goodreads.com/book/show/1137702.The_Wendigo">Blackwood, A. - The Wendigo</a>: A classic American horror tale. Predating H.P. Lovecraft, Blackwood nevertheless create a cosmic sense of dread by exploring stark imagery in the vastness of nature.</li>
+                <li><a href="https://www.goodreads.com/book/show/55399.Gardens_of_the_Moon">Erikson, S. & Esselmont, I. - Malazan book of the Fallen</a>: </li>
+                <li><a href="https://www.goodreads.com/book/show/228665.The_Eye_of_the_World?from_search=true&from_srp=true&qid=a0KJ27JvrL&rank=1">Jordan, R. & Sanderson, B. - The Wheel of Time</a>: </li>
+                <li><a href="https://www.goodreads.com/book/show/153747.Moby_Dick_or_the_Whale?from_search=true&from_srp=true&qid=N4n5ad0b7f&rank=1">Melville, H. - Moby-Dick</a>: The classic epic of obsession and adventure. The only book I have ever (partially) read that I would recommend the abridged version of -- the cetology chapters absolutely destroy any narrative cohesion. [INCOMPLETE READING]</li>
+                <li><a href="https://www.goodreads.com/book/show/5907.The_Hobbit_or_There_and_Back_Again?from_search=true&from_srp=true&qid=7MdosMoq7u&rank=1">Tolkein, J.R.R. - The Hobbit</a>: </li>
+                <li><a href="https://www.goodreads.com/book/show/33.The_Lord_of_the_Rings?from_search=true&from_srp=true&qid=qWUWwsdNOw&rank=2">Tolkein, J.R.R. - The Lord of the Rings</a>: </li>
             </ul>
         </div>
         <footer id="footer">
