--- a/music.html
+++ b/music.html
@@ -26,39 +26,46 @@
         	<h3>Recommendations are made purely based on my own subjective listening experience.
                 <br/>There will be a heavy focus on extreme metal artists, although I will try to be as eclectic as possible.
                 <br/>Artists are grouped by genre umbrella, so there will undoubtedly be some level of subjectivity involved. Unfortunately, I can't please everyone.</h3>
+                <br/>
+                <br/>Avante-garde Metal:</h3>
         	<ul>
-                <li><a href="https://atom.io">Atom Editor</a> - Highly modifiable text editor with full GitHub integration [Linux, Mac, Windows]</li>
-                <li><a href="https://www.audacityteam.org/">Audacity</a> - Multi-track audio editing, relatively powerful for its learning curve [Linux, Mac, Windows]</li>
-                <ul>
-                    <li class="sub">Requires manual installation of the third-party LAME encoder to export to mp3 on Linux</li>
-                </ul>
-                <li><a href="https://brave.com">Brave Browser</a> - Chrome-based browser with a built-in adblocker and TOR browser [Linux, Mac, Windows]</li>
-                <li><a href="https://calibre-ebook.com">Calibre</a> - E-Book library manager, exporter, and reader [Linux, Mac, Windows]</li>
-                <li><a href="https://picotorrent.org/">Picotorrent</a> - Fast, safe, and minimal torrent client [Windows]</li>
-                <li><a href="https://equalizerapo.com/">Equalizer APO</a> - Open source audio processing software, functions as a systemwide EQ [Windows]</li>
-                <li><a href="https://equalizerapo.com/">Equalizer APO</a>Peace Equalizer - Highly recommended interface for Equalizer APO
-                <li><a href="https://evince.en.softonic.com/">Evince PDF Reader</a> - Lightweight, but powerful, document viewer [Linux]</li>
-                <li><a href="https://www.foxit.com/pdf-reader/">Foxit Reader</a> - Powerful and free document viewer [Linux, Mac, Windows]</li>
-                <ul>
-                    <li class="sub">Lacks some features on Linux</li>
-                    <li class="sub">Advertisements can easily be disabled in the preferences</li>
-                </ul>
-                <li><a href="https://www.gimp.org/">GIMP</a> - Vector based image manipulation software, a Photoshop alternative [Linux, Mac, Windows]</li>
-                <li><a href="https://inkscape.org/">Inkscape</a> - Vector based graphics editor, an Illustrator alternative [Linux, Mac, Windows]</li>
-                <li><a href="https://krita.org/en/">Krita</a> - Feature-heavy painting and drawing program [Linux, Mac, Windows]</li>
-                <li><a href="https://www.getmusicbee.com/">Musicbee</a> - Highly customisable music library manager, exporter, and player [Windows]</li>
-                <ul>
-                    <li class="sub"><a class="sub" href="https://github.com/dsafa/audio-band">Audioband</a> - A taskbar-based audio controller for Spotify, iTunes, or MusicBee [Windows]</li>
-                </ul>
-                <li><a href="https://www.openshot.org/">OpenShot</a> - Powerful video editing software [Linux, Mac, Windows]</li>
-                <li><a href="https://www.scribus.net/">Scribus</a> - Desktop publishing software, an InDesign alternative [Linux, Mac, Windows]</li>
-                <li><a href="https://tiddlywiki.com/">Tiddlywiki</a> - A html based personal wikipedia tool, incredibly lightweight, and unsurpassed as a diary</li>
-                <ul>
-                    <li class="sub"><a class="sub" href="https://github.com/Jermolene/TiddlyDesktop">TiddlyDesktop</a> - A fusion web-browser/Javascript node built in NWJS, allowing Tiddlywiki to run as a native app [Linux, Mac, Windows]</li>
-                    <li class="sub"><a class="sub" href="https://andtidwiki.en.aptoide.com/app">AndTidWiki</a> - A standalone html viewing tool, optimised for TiddlyWiki [Android]</li>
-                </ul>
-                <li><a href="https://www.videolan.org/">VLC</a> - Powerful multimedia player [Linux, Mac, Windows]</li>
-                <li><a href="https://www.zotero.org/">Zotero</a> - Reference and journal library manager, capable of sharing libraries between devices [Linux, Mac, Windows]</li>
+                <li><a href="https://www.youtube.com/watch?v=UZzYxGZ7Hmc">Igorrr</a>: Alias and project of French musician, Gautier Serre, Igorrr is a ludicrous combination of baroque, EDM, and black metal.</li>
+            </ul>
+            <h3>Black Metal:</h3>
+            <ul>
+                <li><a href="https://www.youtube.com/watch?v=JjNYmxdkd1w">Zeal and Ardor</a>: A Swiss six-piece, playing gospel and blues infused black metal.</li>
+            </ul>
+            <h3>Death Metal:</h3>
+            <ul>
+                <li><a href="https://www.youtube.com/watch?v=5sV2zTMON6E">1914</a>: A Ukrainian five-piece, whose blackened-death metal is as heavy as the WWI themed lyrical focus.</li>
+            </ul>
+            <h3>Folk Metal:</h3>
+            <ul>
+                <li><a href="https://www.youtube.com/watch?v=x4SIK5u2Nfg">Amon Amarth</a>: One of the largest names in folk metal, Amon Amarth are a Swedish five-piece famous for their groovy, norse mythology themed take on death metal.</li>
+            </ul>
+            <h3>Grind and Noise:</h3>
+            <ul>
+                <li><a href="https://www.youtube.com/watch?v=OMYe7M26fZg">Anaal Nathrakh</a>: Legendary Birmingham (UK) two-piece grindcore outfit Anaal Nathrakh are the auditory equIvalent of being hit by a bus.</li>
+            </ul>
+            <h3>Hard Rock:</h3>
+            <ul>
+                <li><a href="https://www.youtube.com/watch?v=VqoyKzgkqR4">Ghost</a>: Tobias Forge's hard rock project, Ghost, combine blues, doom, and camp aethetics to put out some of the catchiest rock hits ever written.</li>
+            </ul>
+            <h3>Industrial:</h3>
+            <ul>
+                <li><a href="https://www.youtube.com/watch?v=WXv31OmnKqQ">Rammstein</a>: Legendary neue Deutsche härte pioneers, Rammstein, are provocative, dramatic, and unsurpassed in the industrial scene. </li>
+            </ul>
+            <h3>Piano Rock and Acoustic Comedy:</h3>
+            <ul>
+                <li><a href="https://www.youtube.com/watch?v=IZeWPScnolo">Tim Minchin</a>: Marrying comedy and piano rock, Tim Minchin's music is a celebration of both, with a wit that stays on the accessible side of obnoxious.</li>
+            </ul>
+            <h3>Power Metal:</h3>
+            <ul>
+                <li><a href="https://www.youtube.com/watch?v=-AFdwoyNT24">Sabaton</a>: Sabaton are a Swedish five-piece who put out catchy (if somewhat cheesy) heavy metal that juxtaposes occassionally bleak historical themes with modern melodic metal trappings.</li>
+            </ul>
+            <h3>Rave and Hyperpop:</h3>
+            <ul>
+                <li><a href="https://www.youtube.com/watch?v=2uTMTyqQxl4">Little Big</a>: This tongue-and-cheek Russian project are responsible for some irresistably catchy rave tracks that celebrate slavic culture, whilst criticising the prevalence of systemic abuse.</li>
             </ul>
         </div>
         <footer id="footer">
