--- a/music.html
+++ b/music.html
@@ -25,7 +25,7 @@
         <div id="page_content">
         	<h3>Recommendations are made purely based on my own subjective listening experience.
                 <br/>There will be a heavy focus on extreme metal artists, although I will try to be as eclectic as possible.
-                <br/>Artists are grouped by genre umbrella, so there will undoubtedly be some level of subjectivity involved. Unfortunately, I can't please everyone.</h3>
+                <br/>Artists are grouped by genre umbrella, so there will undoubtedly be some level of subjectivity involved. Unfortunately, I can't please everyone.
                 <br/>
                 <br/>Avante-garde Metal:</h3>
         	<ul>
