--- a/books.html
+++ b/books.html
@@ -28,16 +28,16 @@
                 <br/>
                 <br/>Audiobooks:</h3>
         	<ul>
-                <li><a href="https://www.goodreads.com/series/40957-the-hitchhiker-s-guide-to-the-galaxy">Adams, D. - The Hitchhiker's Guide to the Galaxy [1 - 5]</a>: Occasionally philosophical, often contemplative, and consistently hilarious, this is a sci-fi series full of imagination and British charm. The audiobooks are marvellously voiced, too.</li>
+                <li><a href="https://www.goodreads.com/series/40957-the-hitchhiker-s-guide-to-the-galaxy">Adams, D. - The Hitchhiker's Guide to the Galaxy [1 - 5]:</a> Occasionally philosophical, often contemplative, and consistently hilarious, this is a sci-fi series full of imagination and British charm. The audiobooks are marvellously voiced, too.</li>
             </ul>
             <h3>Print:</h3>
             <ul>
-                <li><a href="https://www.goodreads.com/book/show/1137702.The_Wendigo">Blackwood, A. - The Wendigo</a>: A classic American horror tale. Predating H.P. Lovecraft, Blackwood nevertheless create a cosmic sense of dread by exploring stark imagery in the vastness of nature.</li>
-                <li><a href="https://www.goodreads.com/book/show/55399.Gardens_of_the_Moon">Erikson, S. & Esselmont, I. - Malazan book of the Fallen</a>: </li>
-                <li><a href="https://www.goodreads.com/book/show/228665.The_Eye_of_the_World?from_search=true&from_srp=true&qid=a0KJ27JvrL&rank=1">Jordan, R. & Sanderson, B. - The Wheel of Time</a>: </li>
-                <li><a href="https://www.goodreads.com/book/show/153747.Moby_Dick_or_the_Whale?from_search=true&from_srp=true&qid=N4n5ad0b7f&rank=1">Melville, H. - Moby-Dick</a>: The classic epic of obsession and adventure. The only book I have ever (partially) read that I would recommend the abridged version of -- the cetology chapters absolutely destroy any narrative cohesion. [INCOMPLETE READING]</li>
-                <li><a href="https://www.goodreads.com/book/show/5907.The_Hobbit_or_There_and_Back_Again?from_search=true&from_srp=true&qid=7MdosMoq7u&rank=1">Tolkein, J.R.R. - The Hobbit</a>: </li>
-                <li><a href="https://www.goodreads.com/book/show/33.The_Lord_of_the_Rings?from_search=true&from_srp=true&qid=qWUWwsdNOw&rank=2">Tolkein, J.R.R. - The Lord of the Rings</a>: </li>
+                <li><a href="https://www.goodreads.com/book/show/1137702.The_Wendigo">Blackwood, A. - The Wendigo:</a> A classic American horror tale. Predating H.P. Lovecraft, Blackwood nevertheless create a cosmic sense of dread by exploring stark imagery in the vastness of nature.</li>
+                <li><a href="https://www.goodreads.com/book/show/55399.Gardens_of_the_Moon">Erikson, S. & Esselmont, I. - Malazan book of the Fallen:</a> </li>
+                <li><a href="https://www.goodreads.com/book/show/228665.The_Eye_of_the_World?from_search=true&from_srp=true&qid=a0KJ27JvrL&rank=1">Jordan, R. & Sanderson, B. - The Wheel of Time:</a> </li>
+                <li><a href="https://www.goodreads.com/book/show/153747.Moby_Dick_or_the_Whale?from_search=true&from_srp=true&qid=N4n5ad0b7f&rank=1">Melville, H. - Moby-Dick:</a> The classic epic of obsession and adventure. The only book I have ever (partially) read that I would recommend the abridged version of -- the cetology chapters absolutely destroy any narrative cohesion. [INCOMPLETE READING]</li>
+                <li><a href="https://www.goodreads.com/book/show/5907.The_Hobbit_or_There_and_Back_Again?from_search=true&from_srp=true&qid=7MdosMoq7u&rank=1">Tolkein, J.R.R. - The Hobbit:</a> </li>
+                <li><a href="https://www.goodreads.com/book/show/33.The_Lord_of_the_Rings?from_search=true&from_srp=true&qid=qWUWwsdNOw&rank=2">Tolkein, J.R.R. - The Lord of the Rings:</a> </li>
             </ul>
         </div>
         <footer id="footer">
