--- a/music.html
+++ b/music.html
@@ -29,43 +29,43 @@
                 <br/>
                 <br/>Avante-garde Metal:</h3>
         	<ul>
-                <li><a href="https://www.youtube.com/watch?v=UZzYxGZ7Hmc">Igorrr</a>: Alias and project of French musician, Gautier Serre, Igorrr is a ludicrous combination of baroque, EDM, and black metal.</li>
+                <li><a href="https://www.youtube.com/watch?v=UZzYxGZ7Hmc">Igorrr:</a> Alias and project of French musician, Gautier Serre, Igorrr is a ludicrous combination of baroque, EDM, and black metal.</li>
             </ul>
             <h3>Black Metal:</h3>
             <ul>
-                <li><a href="https://www.youtube.com/watch?v=JjNYmxdkd1w">Zeal and Ardor</a>: A Swiss six-piece, playing gospel and blues infused black metal.</li>
+                <li><a href="https://www.youtube.com/watch?v=JjNYmxdkd1w">Zeal and Ardor:</a> A Swiss six-piece, playing gospel and blues infused black metal.</li>
             </ul>
             <h3>Death Metal:</h3>
             <ul>
-                <li><a href="https://www.youtube.com/watch?v=5sV2zTMON6E">1914</a>: A Ukrainian five-piece, whose blackened-death metal is as heavy as the WWI themed lyrical focus.</li>
+                <li><a href="https://www.youtube.com/watch?v=5sV2zTMON6E">1914:</a> A Ukrainian five-piece, whose blackened-death metal is as heavy as the WWI themed lyrical focus.</li>
             </ul>
             <h3>Folk Metal:</h3>
             <ul>
-                <li><a href="https://www.youtube.com/watch?v=x4SIK5u2Nfg">Amon Amarth</a>: One of the largest names in folk metal, Amon Amarth are a Swedish five-piece famous for their groovy, norse mythology themed take on death metal.</li>
+                <li><a href="https://www.youtube.com/watch?v=x4SIK5u2Nfg">Amon Amarth:</a> One of the largest names in folk metal, Amon Amarth are a Swedish five-piece famous for their groovy, norse mythology themed take on death metal.</li>
             </ul>
             <h3>Grind and Noise:</h3>
             <ul>
-                <li><a href="https://www.youtube.com/watch?v=OMYe7M26fZg">Anaal Nathrakh</a>: Legendary Birmingham (UK) two-piece grindcore outfit Anaal Nathrakh are the auditory equIvalent of being hit by a bus.</li>
+                <li><a href="https://www.youtube.com/watch?v=OMYe7M26fZg">Anaal Nathrakh:</a> Legendary Birmingham (UK) two-piece grindcore outfit Anaal Nathrakh are the auditory equIvalent of being hit by a bus.</li>
             </ul>
             <h3>Hard Rock:</h3>
             <ul>
-                <li><a href="https://www.youtube.com/watch?v=VqoyKzgkqR4">Ghost</a>: Tobias Forge's hard rock project, Ghost, combine blues, doom, and camp aethetics to put out some of the catchiest rock hits ever written.</li>
+                <li><a href="https://www.youtube.com/watch?v=VqoyKzgkqR4">Ghost:</a> Tobias Forge's hard rock project, Ghost, combine blues, doom, and camp aethetics to put out some of the catchiest rock hits ever written.</li>
             </ul>
             <h3>Industrial:</h3>
             <ul>
-                <li><a href="https://www.youtube.com/watch?v=WXv31OmnKqQ">Rammstein</a>: Legendary neue Deutsche härte pioneers, Rammstein, are provocative, dramatic, and unsurpassed in the industrial scene. </li>
+                <li><a href="https://www.youtube.com/watch?v=WXv31OmnKqQ">Rammstein:</a> Legendary neue Deutsche härte pioneers, Rammstein, are provocative, dramatic, and unsurpassed in the industrial scene. </li>
             </ul>
             <h3>Piano Rock and Acoustic Comedy:</h3>
             <ul>
-                <li><a href="https://www.youtube.com/watch?v=IZeWPScnolo">Tim Minchin</a>: Marrying comedy and piano rock, Tim Minchin's music is a celebration of both, with a wit that stays on the accessible side of obnoxious.</li>
+                <li><a href="https://www.youtube.com/watch?v=IZeWPScnolo">Tim Minchin:</a> Marrying comedy and piano rock, Tim Minchin's music is a celebration of both, with a wit that stays on the accessible side of obnoxious.</li>
             </ul>
             <h3>Power Metal:</h3>
             <ul>
-                <li><a href="https://www.youtube.com/watch?v=-AFdwoyNT24">Sabaton</a>: Sabaton are a Swedish five-piece who put out catchy (if somewhat cheesy) heavy metal that juxtaposes occassionally bleak historical themes with modern melodic metal trappings.</li>
+                <li><a href="https://www.youtube.com/watch?v=-AFdwoyNT24">Sabaton:</a> Sabaton are a Swedish five-piece who put out catchy (if somewhat cheesy) heavy metal that juxtaposes occassionally bleak historical themes with modern melodic metal trappings.</li>
             </ul>
             <h3>Rave and Hyperpop:</h3>
             <ul>
-                <li><a href="https://www.youtube.com/watch?v=2uTMTyqQxl4">Little Big</a>: This tongue-and-cheek Russian project are responsible for some irresistably catchy rave tracks that celebrate slavic culture, whilst criticising the prevalence of systemic abuse.</li>
+                <li><a href="https://www.youtube.com/watch?v=2uTMTyqQxl4">Little Big:</a> This tongue-and-cheek Russian project are responsible for some irresistably catchy rave tracks that celebrate slavic culture, whilst criticising the prevalence of systemic abuse.</li>
             </ul>
         </div>
         <footer id="footer">
