--- a/abstracts.html
+++ b/abstracts.html
@@ -10,7 +10,8 @@
             <ul class="nav">
                 <li class="nav"><a class = "nav" href="https://c-ratcliffe.github.io">Home</a></li>
                 <li class="nav"><a class = "nav" href="https://c-ratcliffe.github.io/abstracts">Abstracts</a></li>
-                <li class="nav"><a class = "nav" href="https://c-ratcliffe.github.io/books">Books</a></li>
+                <li class="nav"><a class = "nav" href="https://c-ratcliffe.github.io/books">Books</a></li>                
+                <li class="nav"><a class = "nav" href="https://c-ratcliffe.github.io/cv">C.V.</a></li>
                 <li class="nav"><a class = "nav" href="https://c-ratcliffe.github.io/music">Music</a></li>
                 <li class="nav"><a class = "nav" href="https://c-ratcliffe.github.io/software">Software</a></li>
                 <li class="nav"><a class = "nav" href="https://c-ratcliffe.github.io/acknowledgements">Acknowledgements</a></li>
