--- a/music.html
+++ b/music.html
@@ -10,7 +10,8 @@
             <ul class="nav">
                 <li class="nav"><a class = "nav" href="https://c-ratcliffe.github.io">Home</a></li>
                 <li class="nav"><a class = "nav" href="https://c-ratcliffe.github.io/abstracts">Abstracts</a></li>
-                <li class="nav"><a class = "nav" href="https://c-ratcliffe.github.io/books">Books</a></li>
+                <li class="nav"><a class = "nav" href="https://c-ratcliffe.github.io/books">Books</a></li>                
+                <li class="nav"><a class = "nav" href="https://c-ratcliffe.github.io/cv">C.V.</a></li>
                 <li class="nav"><a class = "nav" href="https://c-ratcliffe.github.io/music">Music</a></li>
                 <li class="nav"><a class = "nav" href="https://c-ratcliffe.github.io/software">Software</a></li>
                 <li class="nav"><a class = "nav" href="https://c-ratcliffe.github.io/acknowledgements">Acknowledgements</a></li>
@@ -65,7 +66,7 @@
             </ul>
             <h3>Rave and Hyperpop:</h3>
             <ul>
-                <li><a href="https://www.youtube.com/watch?v=2uTMTyqQxl4">Little Big:</a> This tongue-and-cheek Russian project are responsible for some irresistably catchy rave tracks that celebrate slavic culture, whilst criticising the prevalence of systemic abuse.</li>
+                <li><a href="https://www.youtube.com/watch?v=2uTMTyqQxl4">Little Big:</a> This tongue-in-cheek Russian project are responsible for some irresistably catchy rave tracks that celebrate slavic culture, whilst criticising the prevalence of systemic abuse.</li>
             </ul>
         </div>
         <footer id="footer">
