--- a/cv.html
+++ b/cv.html
@@ -17,17 +17,14 @@
                 <li class="nav"><a class = "nav" href="https://c-ratcliffe.github.io/acknowledgements">Acknowledgements</a></li>
             </ul>
         	<div id="hero_text">
-        		<h1>Acknowledgments</h1>
+        		<h1>Corey Ratcliffe</h1>
         	</div>
         	<div id="hero_subtext">
-        		<h2>Individuals who have contributed to this site, in one way or another</h2>
+        		<h2>A C.V.</h2>
             </div>
         </div>
         <div id="page_content">
-        	<h3>Media</h3>
-        	<ul>
-                <li>Header image: Used under the free Unsplash license, provided by <a href="Robina Weermeijer">Robina Weermeijer</a></li>
-            </ul>
+        	<h3>Coming somewhat soon</h3>
         </div>
         <footer id="footer">
             <p class="footertext">All opinions presented are solely my own
