--- a/books.html
+++ b/books.html
@@ -3,6 +3,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400&display=swap" rel="stylesheet">
 <link rel="stylesheet" type="text/css" href="https://c-ratcliffe.github.io/style.css">
+<meta name="viewport" content="width=device-width, initial-scale=0.5">
 <html>
 <body>
     <div id="page-container">
