--- a/books.html
+++ b/books.html
@@ -25,10 +25,8 @@
             </div>
         </div>
         <div id="page_content">
-        	<h3>Recommendations are made purely based on my own subjective reading experience.
-                <br/>Audiobooks have been included, but as part of a separate section.
-                <br/>
-                <br/>Audiobooks:</h3>
+        	<p class="captiontext">Recommendations are made purely based on my own subjective reading experience.Audiobooks have been included, but as part of a separate section.</p>
+            <h3>Audiobooks:</h3>
         	<ul>
                 <li><a href="https://www.goodreads.com/series/40957-the-hitchhiker-s-guide-to-the-galaxy">Adams, D. - The Hitchhiker's Guide to the Galaxy [1 - 5]:</a> Occasionally philosophical, often contemplative, and consistently hilarious, this is a sci-fi series full of imagination and British charm. The audiobooks are marvellously voiced, too.</li>
             </ul>
