--- a/music.html
+++ b/music.html
@@ -25,11 +25,8 @@
             </div>
         </div>
         <div id="page_content">
-        	<h3>Recommendations are made purely based on my own subjective listening experience.
-                <br/>There will be a heavy focus on extreme metal artists, although I will try to be as eclectic as possible.
-                <br/>Artists are grouped by genre umbrella, so there will undoubtedly be some level of subjectivity involved. Unfortunately, I can't please everyone.
-                <br/>
-                <br/>Avante-garde Metal:</h3>
+        	<p class="captiontext">Recommendations are made purely based on my own subjective listening experience. There will be a heavy focus on extreme metal artists, although I will try to be as eclectic as possible. Artists are grouped by genre umbrella, so there will undoubtedly be some level of subjectivity involved. Unfortunately, I can't please everyone.</p>
+            <h3>Avante-garde Metal:</h3>
         	<ul>
                 <li><a href="https://www.youtube.com/watch?v=UZzYxGZ7Hmc">Igorrr:</a> Alias and project of French musician, Gautier Serre, Igorrr is a ludicrous combination of baroque, EDM, and black metal.</li>
             </ul>
