--- a/software.html
+++ b/software.html
@@ -25,8 +25,9 @@
             </div>
         </div>
         <div id="page_content">
-        	<h3>Efforts have been made to limit software to free and open-source options. Some paid for options are included when no better alternative exists (to my knowledge). Subscription models are excluded entirely.</h3>
-        	<ul>
+        	<p class="captiontext">Efforts have been made to limit software to free and open-source options. Some paid for options are included when no better alternative exists (to my knowledge). Subscription models are excluded entirely.</p>
+        	<h3>Downloadable:</h3>
+            <ul>
                 <li><a href="https://atom.io">Atom Editor</a> - Highly modifiable text editor with full GitHub integration [Linux, Mac, Windows]</li>
                 <li><a href="https://www.audacityteam.org/">Audacity</a> - Multi-track audio editing, relatively powerful for its learning curve [Linux, Mac, Windows]</li>
                 <ul>
