--- a/books.html
+++ b/books.html
@@ -25,7 +25,6 @@
             </div>
         </div>
         <div id="page_content">
-        	<p class="captiontext">Recommendations are made purely based on my own subjective reading experience.Audiobooks have been included, but as part of a separate section.</p>
             <h3>Audiobooks:</h3>
         	<ul>
                 <li><a href="https://www.goodreads.com/series/40957-the-hitchhiker-s-guide-to-the-galaxy">Adams, D. - The Hitchhiker's Guide to the Galaxy [1 - 5]:</a> Occasionally philosophical, often contemplative, and consistently hilarious, this is a sci-fi series full of imagination and British charm. The audiobooks are marvellously voiced, too.</li>
@@ -39,6 +38,7 @@
                 <li><a href="https://www.goodreads.com/book/show/5907.The_Hobbit_or_There_and_Back_Again?from_search=true&from_srp=true&qid=7MdosMoq7u&rank=1">Tolkein, J.R.R. - The Hobbit:</a> </li>
                 <li><a href="https://www.goodreads.com/book/show/33.The_Lord_of_the_Rings?from_search=true&from_srp=true&qid=qWUWwsdNOw&rank=2">Tolkein, J.R.R. - The Lord of the Rings:</a> </li>
             </ul>
+        	<p class="captiontext">Recommendations are made purely based on my own subjective reading experience. Recommendations of audiobooks are given based on the content of the book, not the presentation.</p>
         </div>
         <footer id="footer">
             <p class="footertext">All opinions presented are solely my own
