--- a/music.html
+++ b/music.html
@@ -25,7 +25,6 @@
             </div>
         </div>
         <div id="page_content">
-        	<p class="captiontext">Recommendations are made purely based on my own subjective listening experience. There will be a heavy focus on extreme metal artists, although I will try to be as eclectic as possible. Artists are grouped by genre umbrella, so there will undoubtedly be some level of subjectivity involved. Unfortunately, I can't please everyone.</p>
             <h3>Avante-garde Metal:</h3>
         	<ul>
                 <li><a href="https://www.youtube.com/watch?v=UZzYxGZ7Hmc">Igorrr:</a> Alias and project of French musician, Gautier Serre, Igorrr is a ludicrous combination of baroque, EDM, and black metal.</li>
@@ -66,6 +65,7 @@
             <ul>
                 <li><a href="https://www.youtube.com/watch?v=2uTMTyqQxl4">Little Big:</a> This tongue-in-cheek Russian project are responsible for some irresistably catchy rave tracks that celebrate slavic culture, whilst criticising the prevalence of systemic abuse.</li>
             </ul>
+            <p class="captiontext">Recommendations are made purely based on my own subjective listening experience. Artists are grouped by genre umbrella, so there will undoubtedly be some level of subjectivity involved; unfortunately, I can't please everyone.</p>
         </div>
         <footer id="footer">
             <p class="footertext">All opinions presented are solely my own
