--- a/software.html
+++ b/software.html
@@ -36,7 +36,9 @@
                 <li><a href="https://calibre-ebook.com">Calibre</a> - E-Book library manager, exporter, and reader [Linux, Mac, Windows]</li>
                 <li><a href="https://picotorrent.org/">Picotorrent</a> - Fast, safe, and minimal torrent client [Windows]</li>
                 <li><a href="https://equalizerapo.com/">Equalizer APO</a> - Open source audio processing software, functions as a systemwide EQ [Windows]</li>
-                <li><a href="https://equalizerapo.com/">Equalizer APO</a>Peace Equalizer - Highly recommended interface for Equalizer APO
+                <ul>
+                    <li class="sub"><a href="https://sourceforge.net/projects/peace-equalizer-apo-extension/">Peace Equalizer</a> - Highly recommended interface for Equalizer APO
+                </ul>
                 <li><a href="https://evince.en.softonic.com/">Evince PDF Reader</a> - Lightweight, but powerful, document viewer [Linux]</li>
                 <li><a href="https://www.foxit.com/pdf-reader/">Foxit Reader</a> - Powerful and free document viewer [Linux, Mac, Windows]</li>
                 <ul>
@@ -48,14 +50,14 @@
                 <li><a href="https://krita.org/en/">Krita</a> - Feature-heavy painting and drawing program [Linux, Mac, Windows]</li>
                 <li><a href="https://www.getmusicbee.com/">Musicbee</a> - Highly customisable music library manager, exporter, and player [Windows]</li>
                 <ul>
-                    <li class="sub"><a class="sub" href="https://github.com/dsafa/audio-band">Audioband</a> - A taskbar-based audio controller for Spotify, iTunes, or MusicBee [Windows]</li>
+                    <li class="sub"><a href="https://github.com/dsafa/audio-band">Audioband</a> - A taskbar-based audio controller for Spotify, iTunes, or MusicBee [Windows]</li>
                 </ul>
                 <li><a href="https://www.openshot.org/">OpenShot</a> - Powerful video editing software [Linux, Mac, Windows]</li>
                 <li><a href="https://www.scribus.net/">Scribus</a> - Desktop publishing software, an InDesign alternative [Linux, Mac, Windows]</li>
                 <li><a href="https://tiddlywiki.com/">Tiddlywiki</a> - A html based personal wikipedia tool, incredibly lightweight, and unsurpassed as a diary</li>
                 <ul>
-                    <li class="sub"><a class="sub" href="https://github.com/Jermolene/TiddlyDesktop">TiddlyDesktop</a> - A fusion web-browser/Javascript node built in NWJS, allowing Tiddlywiki to run as a native app [Linux, Mac, Windows]</li>
-                    <li class="sub"><a class="sub" href="https://andtidwiki.en.aptoide.com/app">AndTidWiki</a> - A standalone html viewing tool, optimised for TiddlyWiki [Android]</li>
+                    <li class="sub"><a href="https://github.com/Jermolene/TiddlyDesktop">TiddlyDesktop</a> - A fusion web-browser/Javascript node built in NWJS, allowing Tiddlywiki to run as a native app [Linux, Mac, Windows]</li>
+                    <li class="sub"><a href="https://andtidwiki.en.aptoide.com/app">AndTidWiki</a> - A standalone html viewing tool, optimised for TiddlyWiki [Android]</li>
                 </ul>
                 <li><a href="https://www.videolan.org/">VLC</a> - Powerful multimedia player [Linux, Mac, Windows]</li>
                 <li><a href="https://www.zotero.org/">Zotero</a> - Reference and journal library manager, capable of sharing libraries between devices [Linux, Mac, Windows]</li>
