--- a/books.html
+++ b/books.html
@@ -38,7 +38,7 @@
                 <li><a href="https://www.goodreads.com/book/show/5907.The_Hobbit_or_There_and_Back_Again?from_search=true&from_srp=true&qid=7MdosMoq7u&rank=1">Tolkein, J.R.R. - The Hobbit:</a> </li>
                 <li><a href="https://www.goodreads.com/book/show/33.The_Lord_of_the_Rings?from_search=true&from_srp=true&qid=qWUWwsdNOw&rank=2">Tolkein, J.R.R. - The Lord of the Rings:</a> </li>
             </ul>
-        	<p class="captiontext"><br/>Recommendations are made purely based on my own subjective reading experience. Recommendations of audiobooks are given based on the content of the book, not the presentation.</p>
+        	<p class="captiontext"><br/><strong>Recommendations are made purely based on my own subjective reading experience. Recommendations of audiobooks are given based on the content of the book, not the presentation.</strong></p>
         </div>
         <footer id="footer">
             <p class="footertext">All opinions presented are solely my own
