--- a/music.html
+++ b/music.html
@@ -65,7 +65,7 @@
             <ul>
                 <li><a href="https://www.youtube.com/watch?v=2uTMTyqQxl4">Little Big:</a> This tongue-in-cheek Russian project are responsible for some irresistably catchy rave tracks that celebrate slavic culture, whilst criticising the prevalence of systemic abuse.</li>
             </ul>
-            <p class="captiontext"><br/>Recommendations are made purely based on my own subjective listening experience. Artists are grouped by genre umbrella, so there will undoubtedly be some level of subjectivity involved; unfortunately, I can't please everyone.</p>
+            <p class="footertext" style><strong>Recommendations are made purely based on my own subjective listening experience. Artists are grouped by genre umbrella, so there will undoubtedly be some level of subjectivity involved; unfortunately, I can't please everyone.</strong></p>
         </div>
         <footer id="footer">
             <p class="footertext">All opinions presented are solely my own
