--- a/software.html
+++ b/software.html
@@ -62,7 +62,7 @@
                 <li><a href="https://www.videolan.org/">VLC</a> - Powerful multimedia player [Linux, Mac, Windows]</li>
                 <li><a href="https://www.zotero.org/">Zotero</a> - Reference and journal library manager, capable of sharing libraries between devices [Linux, Mac, Windows]</li>
             </ul>
-            <p class="captiontext"><br/>Efforts have been made to limit software to free and open-source options. Some paid for options are included when no better alternative exists (to my knowledge). Subscription models are excluded entirely.</p>
+            <p class="footertext" style><strong>Efforts have been made to limit software to free and open-source options. Some paid for options are included when no better alternative exists (to my knowledge). Subscription models are excluded entirely.</strong></p>
         </div>
         <footer id="footer">
             <p class="footertext">All opinions presented are solely my own
