--- a/music.html
+++ b/music.html
@@ -43,7 +43,7 @@
             </ul>
             <h3>Grind and Noise:</h3>
             <ul>
-                <li><a href="https://www.youtube.com/watch?v=OMYe7M26fZg">Anaal Nathrakh:</a> Legendary Birmingham (UK) two-piece grindcore outfit Anaal Nathrakh are the auditory equIvalent of being hit by a bus.</li>
+                <li><a href="https://www.youtube.com/watch?v=OMYe7M26fZg">Anaal Nathrakh:</a> Legendary Birmingham (UK) two-piece grindcore outfit Anaal Nathrakh are the auditory equivalent of being hit by a bus.</li>
             </ul>
             <h3>Hard Rock:</h3>
             <ul>
