--- a/index.html
+++ b/index.html
@@ -27,11 +27,12 @@
         <div id="page_content">
         	<h3>Included on this site is:</h3>
         	<ul>
-                <li>An overview and introduction the work I have done since starting my PhD in neuroimaging, which has focused on imaging neural networks in Epilepsy and Neurocysticercosis</li>
-                <li>A list of recommended software for a wide variety of functions, on Windows, Linux (Ubuntu), and sometimes Android</li>
-                <li>A book and music journal</li>
-                <li>Links to online resources</li>
+                <li>An overview of and introduction to the work I have done since starting my PhD in neuroimaging, which has focused on imaging neural networks in Epilepsy and Neurocysticercosis</li>
                 <li>Supporting information for presentations and posters</li>
+                <li>A book and music journal</li>
+                <li>A list of recommended software for a wide variety of functions, on Windows, Linux (Ubuntu), and sometimes Android</li>
+                <li>Links to software resources</li>
+                <li>An online C.V.</li>
                 <li>Please excuse the commit history, this is a work in progress</li>
             </ul>
         </div>
