--- a/21_subcortical_shape.html
+++ b/21_subcortical_shape.html
@@ -2,20 +2,20 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400&display=swap" rel="stylesheet">
-<link rel="stylesheet" type="text/css" href="https://c-ratcliffe.github.io/style.css">
+<link rel="stylesheet" type="text/css" href="style.css">
 <meta name="viewport" content="width=device-width, initial-scale=0.5">
 <html>
 <body>
     <div id="page-container">
         <div id="hero_image">
             <ul class="nav">
-                <li class="nav"><a class = "nav" href="https://c-ratcliffe.github.io">Home</a></li>
-                <li class="nav"><a class = "nav" href="https://c-ratcliffe.github.io/abstracts">Abstracts</a></li>
-                <li class="nav"><a class = "nav" href="https://c-ratcliffe.github.io/books">Books</a></li>                
-                <li class="nav"><a class = "nav" href="https://c-ratcliffe.github.io/cv">C.V.</a></li>
-                <li class="nav"><a class = "nav" href="https://c-ratcliffe.github.io/music">Music</a></li>
-                <li class="nav"><a class = "nav" href="https://c-ratcliffe.github.io/software">Software</a></li>
-                <li class="nav"><a class = "nav" href="https://c-ratcliffe.github.io/acknowledgements">Acknowledgements</a></li>
+                <li><a class = "nav" href="index.html">Home</a></li>
+                <li><a class = "nav" href="abstracts.html">Abstracts</a></li>
+                <li><a class = "nav" href="books.html">Books</a></li>                
+                <li><a class = "nav" href="cv.html">C.V.</a></li>
+                <li><a class = "nav" href="music.html">Music</a></li>
+                <li><a class = "nav" href="software.html">Software</a></li>
+                <li><a class = "nav" href="acknowledgements.html">Acknowledgements</a></li>
             </ul>
         	<div id="hero_text">
         		<h1>Subcortical Shape Analysis in Patients with Neurocysticercosis Presenting with Seizures</h1>
@@ -34,7 +34,7 @@
             <h3>Results</h3>
         	<p class="bodytext">Patients with NCC and recurrent seizures showed significant (corrected p < .05) inward surface deflation in localised regions of the right hippocampus compared to seizure-free NCC patients, when age and sex were modelled as nuisance regressors (Fig. 1). There was no significant or trend level differences in regional shape of the remaining structures between patients presenting with or without seizures.
             </p>
-            <img class="figure" src="https://c-ratcliffe.github.io/img/21_subcortical_shape_fig1.png" alt="Figure 1. Surface shape analysis results, showing significant inwards deflation of the right hippocampus in the seizure-recurrent group.">
+            <img class="figure" src="img/21_subcortical_shape_fig1.png" alt="Figure 1. Surface shape analysis results, showing significant inwards deflation of the right hippocampus in the seizure-recurrent group.">
             <p class="captiontext"><strong>Figure 1.</strong> Significant inwards deflation of the right hippocampus in seizure-recurrent NCC patients, compared to seizure-free NCC patients. Areas in red represent vertices significantly deflated in the seizure-recurrent group, after multiple-comparisons correction. 
             </p>
             <h3>Conclusions</h3>
@@ -49,7 +49,7 @@
                 <li>Jenkinson M, Beckmann CF, Behrens TEJ, Woolrich MW, Smith SM. FSL. <em>NeuroImage</em> (2012) 62:782–790. doi:<a href="https://www.sciencedirect.com/science/article/pii/S1053811911010603?via%3Dihub">10.1016/j.neuroimage.2011.09.015</a></li>
             </ol>
         </div>
-        <footer id="footer">
+        <footer>
             <p class="footertext">All opinions presented are solely my own
             <br/>Recommendations of media and resources are made independent of any ideologies/beliefs those involved in the production may hold
             <br/>Contact:
