--- a/abstracts.html
+++ b/abstracts.html
@@ -2,38 +2,39 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400&display=swap" rel="stylesheet">
-<link rel="stylesheet" type="text/css" href="https://c-ratcliffe.github.io/style.css">
+<link rel="stylesheet" type="text/css" href="style.css">
+<meta name="viewport" content="width=device-width, initial-scale=0.5">
 <html>
 <body>
     <div id="page-container">
         <div id="hero_image">
             <ul class="nav">
-                <li class="nav"><a class = "nav" href="https://c-ratcliffe.github.io">Home</a></li>
-                <li class="nav"><a class = "nav" href="https://c-ratcliffe.github.io/abstracts">Abstracts</a></li>
-                <li class="nav"><a class = "nav" href="https://c-ratcliffe.github.io/books">Books</a></li>                
-                <li class="nav"><a class = "nav" href="https://c-ratcliffe.github.io/cv">C.V.</a></li>
-                <li class="nav"><a class = "nav" href="https://c-ratcliffe.github.io/music">Music</a></li>
-                <li class="nav"><a class = "nav" href="https://c-ratcliffe.github.io/software">Software</a></li>
-                <li class="nav"><a class = "nav" href="https://c-ratcliffe.github.io/acknowledgements">Acknowledgements</a></li>
+                <li><a class = "nav" href="index.html">Home</a></li>
+                <li><a class = "nav" href="abstracts.html">Abstracts</a></li>
+                <li><a class = "nav" href="books.html">Books</a></li>                
+                <li><a class = "nav" href="cv.html">C.V.</a></li>
+                <li><a class = "nav" href="music.html">Music</a></li>
+                <li><a class = "nav" href="software.html">Software</a></li>
+                <li><a class = "nav" href="acknowledgements.html">Acknowledgements</a></li>
             </ul>
         	<div id="hero_text">
         		<h1>Abstracts</h1>
         	</div>
         	<div id="hero_subtext">
-        		<h2>Summaries of affiliated work that has either been presented or published</h2>
+        		<h2>Links to summaries and abstracts of my affiliated projects</h2>
             </div>
         </div>
         <div id="page_content">
             <h3>First author:</h3>
         	<ul>
-                <li><a href="https://c-ratcliffe.github.io/21_subcortical_shape">2021 - Subcortical Shape Analysis in Patients with Neurocysticercosis Presenting with Seizures</a></li>
+                <li><a href="21_subcortical_shape.html">2021 - Subcortical Shape Analysis in Patients with Neurocysticercosis Presenting with Seizures</a></li>
             </ul>
             <h3>Contributing author:</h3>
         	<ul>
                 <li><a href=""></a></li>
             </ul>
         </div>
-        <footer id="footer">
+        <footer>
             <p class="footertext">All opinions presented are solely my own
             <br/>Recommendations of media and resources are made independent of any ideologies/beliefs those involved in the production may hold
             <br/>Contact:
